Added facebook oAuth2

--- a/.env
+++ b/.env
@@ -57,3 +57,8 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FACEBOOK_CLIENT_ID = 1127873121918164
+FACEBOOK_CLIENT_SECRET = 61a148fc55ba8857610378ce065629f5
+FACEBOOK_REDIRECT_URI = 'http://localhost/oauth/facebook'
+
